Harden vector clustering decisions